Layout fix and extra padding on wrapper

--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -104,12 +104,17 @@ div.actions-wrapper {
      padding-top:0px;
  }
 
+ h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
  #wrapper {
      width: 100%;
  }
 
  #page-wrapper {
-     padding: 0 15px;
+     padding: 15px 15px;
      min-height: 568px;
      background-color: #fff;
  }
@@ -118,7 +123,7 @@ div.actions-wrapper {
      #page-wrapper {
          position: inherit;
          margin: 0 0 0 250px;
-         padding: 0 30px;
+         padding: 30px 30px;
          border-left: 1px solid #e7e7e7;
      }
  }
